# vcmi

./: .gitignore  CMakeLists.txt  Global.h
AI/EmptyAI/: CMakeLists.txt
client/: CMT.cpp  CMakeLists.txt  CPlayerInterface.cpp  CServerHandler.cpp  Client.cpp
client/gui/: CAnimation.cpp  CAnimation.h  SDL_Extensions.cpp
client/lobby/: SelectionTab.cpp
client/mainmenu/: CMainMenu.cpp
client/widgets/: TextControls.cpp  TextControls.h
client/windows/: CAdvmapInterface.cpp  InfoWindows.cpp
cmake_modules/: FindFFmpeg.cmake  FindMinizip.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
launcher/: CMakeLists.txt  mainwindow_moc.cpp
launcher/settingsView/: csettingsview_moc.cpp
lib/: CConsoleHandler.cpp  CGameInterface.cpp  CGameState.cpp  CMakeLists.txt  VCMIDirs.cpp  VCMIDirs.h
lib/filesystem/: AdapterLoaders.cpp  AdapterLoaders.h  CArchiveLoader.cpp  CArchiveLoader.h  CFileInputStream.cpp  CFileInputStream.h  CFilesystemLoader.cpp  CFilesystemLoader.h  CZipLoader.cpp  CZipLoader.h  CZipSaver.cpp  CZipSaver.h  FileStream.cpp  FileStream.h  Filesystem.cpp  ISimpleResourceLoader.h  MinizipExtensions.cpp  MinizipExtensions.h
lib/logging/: CBasicLogConfigurator.cpp  CBasicLogConfigurator.h  CLogger.cpp  CLogger.h
lib/mapping/: CMapInfo.cpp  CMapService.cpp  CMapService.h
lib/minizip/: CMakeLists.txt
lib/serializer/: BinaryDeserializer.cpp  BinaryDeserializer.h  BinarySerializer.cpp  BinarySerializer.h  (+2 more)
osx/: CMakeLists.txt
server/: CMakeLists.txt  CVCMIServer.cpp
test/: CVcmiTestConfig.cpp
(+3 files in other folders)
